--- a/RealEstate/app/templates/sidebar.html
+++ b/RealEstate/app/templates/sidebar.html
@@ -17,12 +17,12 @@
             <ul class="nav flex-column" id="mList1">
                 {% set factor = ['아파트평균가', '일자리대비', '병원수대비', '대중교통대비','학생수대비'] %}
                 <li class="nav-item">
-                    <input type='radio' class='radioData nav-link active' title={{ factor[0]|safe }} id={{ factor[0]|safe }} name="factor" checked value={{ factor[0]|safe }} />
+                    <input type='radio' class='radioData nav-link active' title={{ factor[0]|safe }} id={{ factor[0]|safe }} name="factor" checked value='0' />
                     <label for={{ factor[0]|safe }} >{{ factor[0]|safe }}</label>
                 </li>
                 {% for i in range(1, factor|length) %}
                 <li class="nav-item">
-                    <input type="radio" class="radioData nav-link active" title={{ factor[i]|safe }} name="factor" id={{ factor[i]|safe }} value={{ factor[i]|safe }} />
+                    <input type="radio" class="radioData nav-link active" title={{ factor[i]|safe }} name="factor" id={{ factor[i]|safe }} value={{ i|string }} />
                     <label for={{ factor[i]|safe }} >{{ factor[i]|safe }}</label>
                 </li>
                 {% endfor %}
