--- a/RealEstate/app/static/css/styles.css
+++ b/RealEstate/app/static/css/styles.css
@@ -1,7 +1,7 @@
 /*
  * Sidebar
  */
-#all {
+ #all {
   position: absolute;
   width:100%;
   height: 100%;
@@ -191,6 +191,10 @@ strong {
   height:100%;
 }
 
+input[type='checkbox']{
+  display: none;
+}
+
 #mList1 li input[type="radio"] + label, #mList1 li input[type="checkbox"] + label{
   display:block;
   padding:9px 10px 9px 35px;
@@ -229,7 +233,28 @@ input[type="radio"] + label, input[type="checkbox"] + label {
   /*padding-top:0px;*/
 }
 
-input[type="radio"] + label:before, input[type="checkbox"] + label:before{
+input[type="checkbox"] + label:before {
+  content: "";
+  position: absolute;
+  border:0;
+  background:url('../image/chkbox.png') 0 0 no-repeat;
+  width:18px;
+  height:18px;
+  line-height:18px;
+  overflow: hidden;
+  margin: 0; padding: 0;
+}
+input[type="checkbox"]:checked + label::before{
+  background-image:url('../image/chkedbox.png');
+}
+input[type="checkbox"]:focus + label::before{
+  background-image:url('../image/chkbox.png');
+}
+input[type="checkbox"]:checked:focus + label::before{
+  background-image:url('../image/chkedbox.png');
+}
+
+input[type="radio"] + label:before{
   content: "";
   position: absolute;
   border:0;
@@ -240,24 +265,19 @@ input[type="radio"] + label:before, input[type="checkbox"] + label:before{
   overflow: hidden;
   margin: 0; padding: 0;
 }
-
-input[type="radio"]:checked + label::before, input[type="checkbox"]:checked + label::before{
+input[type="radio"]:checked + label::before{
   background-image:url('../image/radio2.png');
 }
-
-input[type="radio"]:focus + label::before, input[type="checkbox"]:focus + label::before{
+input[type="radio"]:focus + label::before{
   background-image:url('../image/radio1.png');
 }
-
-input[type="radio"]:checked:focus + label::before, input[type="checkbox"]:checked:focus + label::before{
+input[type="radio"]:checked:focus + label::before{
   background-image:url('../image/radio2.png');
 }
 
 label {
   margin-right: 3px;
 }
-
-
 
 /*tr {*/
 /*  width: 600px;*/
