--- a/RealEstate/app/templates/base.html
+++ b/RealEstate/app/templates/base.html
@@ -59,7 +59,7 @@
             let location = ['전국','서울','인천','광주','대구','울산','대전','부산','세종','경기','강원','충남','충북','경북','경남','전북','전남','제주'];
             let sideMenuList = "<input type = 'button' class = 'btn btn-outline-primary mr-1 mb-2' value='검색' />" +
                 "<li class='nav-item'>" +
-                "<input type='checkbox' class='checkboxData nav-link active' title="+location[0]+" id="+location[0]+" name='location' value='전국' checked />" +
+                "<input type='checkbox' class='checkboxData nav-link active' title="+location[0]+" id="+location[0]+" name='checkAll' value='전국' checked />" +
                 "<label for="+location[0]+" >"+location[0]+"</label></li>";
             for (let i=1; i<location.length; i++){
                 sideMenuList += "<li class='nav-item'>" +
