--- a/RealEstate/app/templates/base.html
+++ b/RealEstate/app/templates/base.html
@@ -18,7 +18,7 @@
         let factorData = "0";
         $(document).on("click", ".radioData", function (){
             factorData = $("input[name=factor]:checked").val();
-            get_chart_data(factorData,[]);
+            get_chart_data(factorData,"No");
             $.ajax({
                 url:"/map",
                 type:"GET",
@@ -31,6 +31,7 @@
                 }
             });
         });
+
         $(document).on("click", ".chkData", function (){
             dataLen = $("input[name=location]:checked").length;
             let location= new Array();
