map location select

--- a/RealEstate/app/templates/base.html
+++ b/RealEstate/app/templates/base.html
@@ -24,7 +24,7 @@
                 type:"GET",
                 data:{
                     types:factorData,
-                    location:[]
+                    location:""
                 },
                 success:function(data){
                     $('#map').html(data);
