--- a/RealEstate/app/templates/base.html
+++ b/RealEstate/app/templates/base.html
@@ -81,7 +81,7 @@
             document.getElementById('tabB').className = 'ls';
             let factor = ['아파트평균가', '일자리대비', '병원수대비', '대중교통대비','학생수대비'];
             let sideMenuList = "<li class='nav-item'>" +
-                "<input type='radio' class='radioData nav-link active' title="+factor[0]+" id="+factor[0]+" name='factor' checked value='0' />" +
+                "<input type='radio' class='radioData nav-link active' title="+factor[0]+" id="+factor[0]+" name='factor' value='0' />" +
                 "<label for="+factor[0]+" >"+factor[0]+"</label></li>";
             for (let i=1; i<factor.length; i++){
                 sideMenuList += "<li class='nav-item'>" +
@@ -89,7 +89,8 @@
                     "<label for="+factor[i]+" >"+factor[i]+"</label></li>";
             }
             $('#mList1').html(sideMenuList);
-
+            let clickedId = "input[id='" + factor[parseInt(factorData)] + "']";
+            $(clickedId).prop('checked',true);
         }
         function changeL() {
             document.getElementById('tabA').className = 'ls';
