remove apart price

--- a/RealEstate/app/templates/base.html
+++ b/RealEstate/app/templates/base.html
@@ -85,7 +85,7 @@
         function changeF() {
             document.getElementById('tabA').className = 'ls selected';
             document.getElementById('tabB').className = 'ls';
-            let factor = ['아파트평균가', '일자리대비', '병원수대비', '대중교통대비','학생수대비'];
+            let factor = ['일자리대비', '병원수대비', '대중교통대비','학생수대비'];
             let sideMenuList = "<li class='nav-item'>" +
                 "<input type='radio' class='radioData nav-link active' title="+factor[0]+" id="+factor[0]+" name='factor' value='0' checked />" +
                 "<label for="+factor[0]+" >"+factor[0]+"</label></li>";
