--- a/RealEstate/app/templates/sidebar.html
+++ b/RealEstate/app/templates/sidebar.html
@@ -1,6 +1,6 @@
 {#class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse"#}
 <nav id="sidebarMenu" >
-    <div style="height: 100%;">
+    <div style="height: 100%; position: relative;">
         <div style="height: 10%; border-bottom: 1px solid #b7b7b7;" id="selectTabs">
             <span class="ls selected" id="tabA" style="border-right: 0.5px solid #b7b7b7;">
                 <a href="javascript:void(0);" onclick="changeF()" class="a_ls" >
