--- a/RealEstate/app/templates/sidebar.html
+++ b/RealEstate/app/templates/sidebar.html
@@ -15,7 +15,7 @@
         </div>
         <div style="padding-top: 5px;">
             <ul class="nav flex-column" id="mList1">
-                {% set factor = ['일자리대비', '병원수대비', '대중교통대비','학생수대비'] %}
+                {% set factor = ['일자리대비', '병원수대비', '대중교통대비','사설학원수대비'] %}
                 <li class="nav-item">
                     <input type='radio' class='radioData nav-link active' title={{ factor[0]|safe }} id={{ factor[0]|safe }} name="factor" checked value='0' />
                     <label for={{ factor[0]|safe }} >{{ factor[0]|safe }}</label>
