--- a/RealEstate/app/templates/base.html
+++ b/RealEstate/app/templates/base.html
@@ -78,12 +78,14 @@
         });
 
          $(document).on('click','.checkboxData', function(){
-            var chk = $(this).attr("id")
-            chkedFalseLocation.push(chk)
+            chkedFalseLocation = []
+            $('.checkboxData:checked').each(function(){
+                chkedFalseLocation.push($(this).val())
+            });
         })
 
         $(document).on('click','.eachRadio', function(){
-            chkedFalseLocation = [];
+            chkedFalseLocation = ['전국','서울','인천','광주','대구','울산','대전','부산','세종','경기','강원','충남','충북','경북','경남','전북','전남','제주'];
         })
 
         function changeF() {
@@ -102,27 +104,26 @@
             let clickedId = "input[id='" + factor[parseInt(factorData)] + "']";
             $(clickedId).prop('checked',true);
         }
-        var chkedLocation = ['전국','서울','인천','광주','대구','울산','대전','부산','세종','경기','강원','충남','충북','경북','경남','전북','전남','제주'];
-        var chkedFalseLocation = []
+        var chkedFalseLocation = ['전국','서울','인천','광주','대구','울산','대전','부산','세종','경기','강원','충남','충북','경북','경남','전북','전남','제주'];
         function changeL() {
             document.getElementById('tabA').className = 'ls';
             document.getElementById('tabB').className = 'ls selected';
             let location = ['전국','서울','인천','광주','대구','울산','대전','부산','세종','경기','강원','충남','충북','경북','경남','전북','전남','제주'];
             let sideMenuList = "<input type = 'button' class = 'chkData btn btn-outline-primary mr-1 mb-2' value='검색' />" +
                 "<li class='nav-item'>" +
-                "<input type='checkbox' class='checkboxData nav-link active' title="+location[0]+" id="+location[0]+" name='checkAll' checked value='전국' />" +
+                "<input type='checkbox' class='checkboxData nav-link active' title="+location[0]+" id="+location[0]+" name='checkAll' value='전국' />" +
                 "<label for="+location[0]+" >"+location[0]+"</label></li>";
             for (let i=1; i<location.length; i++){
                 sideMenuList += "<li class='nav-item'>" +
-                    "<input type='checkbox' class='checkboxData nav-link active' title="+location[i]+" id="+location[i]+" name='location' checked value="+location[i]+" />" +
+                    "<input type='checkbox' class='checkboxData nav-link active' title="+location[i]+" id="+location[i]+" name='location' value="+location[i]+" />" +
                     "<label for="+location[i]+" >"+location[i]+"</label></li>";
             }
             
             $('#mList1').html(sideMenuList);
-            for( var i = 0; i<chkedFalseLocation.length; i++){
-                let clickedId = "input[id='" + chkedFalseLocation[i] + "']";
-                $(clickedId).prop('checked',false);
-            }
+                for( var i = 0; i<chkedFalseLocation.length; i++){
+                let clickedId = "input[id='"+chkedFalseLocation[i]+"']";
+                $(clickedId).prop('checked',true);
+                }
            
         }
         function get_chart_data(types, location){
